# Apex-Putter

./: .gitignore  DEPENDENCIES.md  LICENSE  PROJECT_PROPOSAL.md  README.md  source_installs_zkw.sh
cad/APRIL_TAG/_3dprinting/: MOUNT, CLAMP - mirrored back.STL  MOUNT, CLAMP - mirrored front.STL  MOUNT, CLAMP - mirrored lower.STL
cad/APRIL_TAG/_step/: MOUNT, CLAMP.STEP
cad/APRIL_TAG_BRACKET/: bracket_W60L60.STL
cad/GOLF_CLUB/: ball_rubber.SLDPRT  golf_club_fixed.SLDPRT
cad/L_BRACKET/: bracket_W60L60.SLDPRT
cad/MINI_GOLF/: ~$MG_EE.SLDASM
cad/MINI_GOLF/_3dprinting/: MG_CLUB_BASE_FER.STL
cad/MINI_GOLF/_source/: MG_CALIBRATION.SLDPRT  MG_CLUB_BASE_FER.SLDPRT  MG_EE.SLDASM
model/mini_golf_rs.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml  train.py
model/mini_golf_rs.v1i.yolov11/test/labels/: 21_Color_png.rf.0897b532999ac99daea57aa26070bd2a.txt  23_Color_png.rf.e303b9ba8bf0292a5a1217458457bd53.txt  24_Color_png.rf.0b77e668f819ea285303ca156d3d8a31.txt  29_Color_png.rf.d35e01827e635e26ef5c3c045a613687.txt  58_Color_png.rf.7d63b2b0d8ac6bf4bdcbf372996b9c81.txt  6_Color_png.rf.43e7248eb658254c7482196935154e5c.txt
model/mini_golf_rs.v1i.yolov11/train/: labels.cache
model/mini_golf_rs.v1i.yolov11/train/labels/: 10_Color_png.rf.6d23f66ec472b29abba190b245566771.txt  11_Color_png.rf.35be1df5b6b9a180c4d63cf6c590a0a2.txt  12_Color_png.rf.b9f269df8c86676e26d06e0cd113095e.txt  (+47 more)
model/mini_golf_rs.v1i.yolov11/valid/: labels.cache
motion_planner/: README_RobotState.md  package.xml  setup.py
motion_planner/launch/: demo.launch.py  pickplace.launch.py
motion_planner/motion_planner/: MotionPlanningInterface.py  PlanningSceneClass.py  demo_node.py  pick_node.py  test_Integration.py  working1.txt
motion_planner/test/: integration_test.py
runs/detect/train/: args.yaml  results.csv
src/apex_putter/: README_Franka.md  README_RobotState.md  package.xml  setup.cfg  setup.py
src/apex_putter/apex_putter/: BallTrajectoryCalc.py  MotionPlanner.py  MotionPlanningInterface.py  PlanningSceneClass.py  RobotState.py  calibration.py  demo.py  demo_cp.py  demo_node.py  pick_node.py  transform_operations.py  vision.py  yolo.py
src/apex_putter/config/: apriltag.rviz  atag_ros.yaml  demo.rviz  moveit.rviz
src/apex_putter/launch/: calib_handeye.launch.xml  calibration.launch.xml  demo.launch.py  demo.launch.xml  demo_cp.launch.py  pickplace.launch.py  vision.launch.xml
src/apex_putter/urdf/ball_rubber/: CMakeLists.txt  package.xml
src/apex_putter/urdf/ball_rubber/launch/: display.launch  gazebo.launch
src/apex_putter/urdf/ball_rubber/meshes/: base_link.STL
src/apex_putter/urdf/ball_rubber/urdf/: ball_rubber.csv  ball_rubber.urdf
src/apex_putter/urdf/golb_club_fixed/: CMakeLists.txt  package.xml
src/apex_putter/urdf/golb_club_fixed/launch/: display.launch  gazebo.launch
src/apex_putter/urdf/golb_club_fixed/meshes/: base_link.STL
src/apex_putter/urdf/golb_club_fixed/urdf/: golb_club_fixed.csv  golb_club_fixed.urdf
src/apex_putter/urdf/golf_club/: CMakeLists.txt  package.xml
src/apex_putter/urdf/golf_club/launch/: display.launch  gazebo.launch
src/apex_putter/urdf/golf_club/urdf/: golf_club.urdf
src/apex_putter_interfaces/: CMakeLists.txt  package.xml
src/apex_putter_interfaces/msg/: Detection2D.msg  DetectionArray.msg
src/franka/: README.md
src/golf_club/: CMakeLists.txt  README.md  package.xml
src/golf_club/launch/: display.launch.xml  gazebo.launch.xml
src/golf_club/urdf/: golf_club.csv
src/golf_club_fixed_tool/: LICENSE.txt  README.md  package.xml  setup.cfg  setup.py
src/golf_club_fixed_tool/config/: golf_club_fixed_tool.rviz
src/golf_club_fixed_tool/launch/: launch.py
src/golf_club_fixed_tool/urdf/: golf_club_fixed.urdf
(+15 files in other folders)
