<package format="3">
  <name>golf_club</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for golf_club.
    This package contains configuration data, 3D models, and launch files
    for the golf_club robot.
  </description>

  <maintainer email="thisisjueun@email.com">Jueun</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



